jumper/systemconf/jumper-auth.yaml
# 内部访问的Headless Service无头服务
apiVersion: v1
kind: Service
metadata:
  name: jumper-auth-service
  namespace: jumper  #命名空间  
spec:
  selector:
    app: jumper-auth
  ports:
  - name: jumper-auth
    port: 6000
