jumper/systemconf/jumper-job.yaml
# 内部访问的Headless Service无头服务
apiVersion: v1
kind: Service
metadata:
  name: jumper-job-service
  namespace: jumper  #命名空间  
spec:
  selector:
    app: jumper-job
  ports:
  - name: job-admin
    port: 8071
  - name: job-executor1
    port: 8072    
  - name: job-executor2
    port: 8888
