jumper/systemconf/jumper-rbac.yaml
---
# 内部访问的Headless Service无头服务
apiVersion: v1
kind: Service
metadata:
  name: jumper-rbac-service
  namespace: jumper  #命名空间  
spec:
  selector:
    app: jumper-rbac
  ports:
  - name: jumper-rbac
    port: 6004
