jumper/systemconf/jumper-gateway.yaml
---
# 内部访问的Headless Service无头服务
apiVersion: v1
kind: Service
metadata:
  name: jumper-gateway-service
  namespace: jumper  #命名空间  
spec:
  selector:
    app: jumper-gateway
  ports:
  - name: jumper-gateway
    port: 6001  
---
# 外部访问的服务
apiVersion: v1
kind: Service
metadata:
  name: jumper-gateway-external-service
  namespace: jumper  #命名空间
spec:
  selector:
    app: jumper-gateway
  ports:
  - name: jumper-gateway-port
    protocol: TCP
    port: 6001   # kubernetes中的服务之间访问的端口
    targetPort: 6001  #  容器的端口（最根本的端口入口），与制作容器时暴露的端口一致（DockerFile中EXPOSE）
    nodePort: 30601   #  外部机器可访问的端口
  type: NodePort  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jumper-gateway-ingress
  namespace: jumper  #命名空间
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mini-gateway.ghosttyq.site
    secretName: mini-gateway.ghosttyq.site
  rules:  # 用于定义当前Ingress资源的转发规则列表；由rules定义规则，或没有匹配到规则时，所有的流量会转发到由backend定义的默认后端
  - host: mini-gateway.ghosttyq.site
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:  #  默认的后端用于服务那些没有匹配到任何规则的请求；定义Ingress资源时，必须要定义backend或rules两者之一，该字段用于让负载均衡器指定一个全局默认的后端
          service:
            name: jumper-gateway-service    # Service资源名称
            port:
              number: 6001   #Service端口（可以取ports里面的name，也可以取数字端口）
