jumper/systemconf/jumper-upms.yaml
# 内部访问的服务
apiVersion: v1
kind: Service
metadata:
  name: jumper-upms-service
  namespace: jumper  #命名空间  
spec:
  selector:
    app: jumper-upms
  ports:
  - name: jumper-upms
    port: 8099
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jumper-upms-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "True"
  namespace: jumper  #命名空间
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mini-upms.ghosttyq.site
    secretName: mini-upms.ghosttyq.site
  rules:  # 用于定义当前Ingress资源的转发规则列表；由rules定义规则，或没有匹配到规则时，所有的流量会转发到由backend定义的默认后端
  - host: mini-upms.ghosttyq.site
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:  #  默认的后端用于服务那些没有匹配到任何规则的请求；定义Ingress资源时，必须要定义backend或rules两者之一，该字段用于让负载均衡器指定一个全局默认的后端
          service:
            name: jumper-upms-service    # Service资源名称
            port: 
              number: 8099   #Service端口（可以取ports里面的name，也可以取数字端口）
